<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="5dp"
     >

    <TextView
        android:id="@+id/restoreT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/rd_photoTitle" 
         android:textSize="16sp"
         android:gravity="center_horizontal"
        />

    <Button
        android:id="@+id/restoreOp1"
        style="@style/buttonS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/rd_takeButton" 
        
        />

    <TextView
        android:id="@+id/sepText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/rd_photoOr" 
        android:textSize="16sp" />

    <TextView
        android:id="@+id/restoreT2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/rd_imageTitle" 
         android:textSize="16sp"
          android:gravity="center_horizontal"
         />

    <Button
        android:id="@+id/restoreOp2"
        style="@style/buttonSS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
       android:text="@string/rd_openButton"  />

</LinearLayout>
