<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.proyecto.RestoreData"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/restoreT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:text="@string/rd_photoTitle"
        android:textSize="18sp" />

    <Button
        android:id="@+id/restoreOp1"
        style="@style/buttonS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/rd_takeButton" />

    <TextView
        android:id="@+id/sepText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/rd_photoOr"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/restoreT2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/rd_imageTitle"
        android:textSize="18sp" />

    <Button
        android:id="@+id/restoreOp2"
        style="@style/buttonSS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/rd_openButton"/>

</LinearLayout>