<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.proyecto.MainActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/read"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startRead"
        android:text="@string/read"
        android:layout_marginTop="50dp"
         />
    
    <Button
        android:id="@+id/write"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/write" 
        android:onClick="startWrite"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        />
    
    <Button
        android:id="@+id/my_tag"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/my_tags" 
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        />
    
    <Button
        android:id="@+id/extras"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/extras"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
         />

</LinearLayout>

