<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/labelPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="29dp"
        android:text="@string/policyLabel" />

    <EditText
        android:id="@+id/fieldPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/labelPolicy"
        android:layout_below="@+id/labelPolicy"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/policyField"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/labelPLate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fieldPolicy"
        android:layout_below="@+id/fieldPolicy"
        android:layout_marginTop="28dp"
        android:text="@string/plateLabel" />

    <EditText
        android:id="@+id/fieldPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/labelPLate"
        android:layout_below="@+id/labelPLate"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/plateField" 
        android:singleLine="true"
        />

</RelativeLayout>
