<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.proyecto.AccidentAssistance" >

        <TextView
            android:id="@+id/assistanceFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/assistanceHeader"
            android:layout_below="@+id/assistanceProcessButton"
            android:layout_margin="15dp"
            android:layout_marginTop="21dp"
            android:text="@string/aa_footer"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tagData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/assistanceFooter"
            android:layout_centerVertical="true"
            android:text="" />

        <TextView
            android:id="@+id/dataHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/assistanceHeader"
            android:layout_alignParentTop="true"
            android:layout_marginTop="14dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="Datos del asegurado" />

        <ToggleButton
            android:id="@+id/assistanceProcessButton"
            style="@style/buttonS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tagData"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:onClick="onToggleClicked"
            android:textOff="@string/aa_OFFbutton"
            android:textOn="@string/aa_ONbutton" />

        <TextView
            android:id="@+id/dataPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dataHeader"
            android:layout_below="@+id/dataHeader"
            android:layout_marginTop="14dp"
             android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/policyLabel" />

        <TextView
            android:id="@+id/dataPNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/assistanceHeader"
            android:layout_alignRight="@+id/dataPolicy"
            android:layout_toRightOf="@+id/tagData"
             android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/plateLabel" />

        <TextView
            android:id="@+id/assistanceHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/assistanceProcessButton"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:text="@string/aa_header"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dataPolicyField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/dataPolicy"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/dataPolicy"
            android:text="policy" />

        <TextView
            android:id="@+id/dataPNumberField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/assistanceHeader"
            android:layout_alignLeft="@+id/dataPolicyField"
            android:text="plate" />
    
</RelativeLayout>